--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,12 @@ a {
   padding: 10px;
   border-radius: 5px;
   font-size: 2rem;
+  transition: 0.2s;
+}
+.inicio__texto__contacto__link:hover {
+  color: #0d6efd;
+  background: #ffffff;
+  cursor: pointer;
 }
 
 .productos {
@@ -173,11 +179,11 @@ a {
   border: 3px solid #00000030;
   border-radius: 5px;
   margin: 10px 0;
+  overflow: hidden;
 }
 .servicios__galeria__contenedor__img {
   max-width: 300px;
   object-fit: cover;
-  border-radius: 5px;
 }
 .servicios__galeria__contenedor__titulo {
   max-width: 280px;
@@ -191,6 +197,11 @@ a {
   background: #0d6efd;
   padding: 10px;
   border-radius: 5px;
+}
+.servicios__galeria__contenedor__link:hover {
+  color: #0d6efd;
+  background: #ffffff;
+  cursor: pointer;
 }
 
 @media (min-width: 769px) {
@@ -212,6 +223,7 @@ a {
   border: 3px solid #00000030;
   border-radius: 5px;
   margin: 10px 0;
+  overflow: hidden;
   margin: 0 auto;
 }
 .sobre_nosotros__contenedor__img {
