--- a/scss/components/_servicios.scss
+++ b/scss/components/_servicios.scss
@@ -11,7 +11,6 @@
       &__img {
         max-width: 300px;
         object-fit: cover;
-        border-radius: 5px;
       }
 
       &__titulo {
@@ -23,6 +22,13 @@
         width: max-content;
         margin: 10px;
         @include links(map-get($color, blanco), map-get($color, azul));
+
+        &:hover {
+          @include animacion__links(
+            map-get($color, azul),
+            map-get($color, blanco)
+          );
+        }
       }
     }
   }
