--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,23 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: #f5f5f5;
+  background: #ffffff;
 }
 
 a {
   text-decoration: none;
 }
 
+.m-heigth {
+  min-height: calc(100vh - 60px - 30px);
+}
+
 .header {
+  position: relative;
   display: flex;
   justify-content: center;
-  background: #f5f5f5;
+  background: #ffffff;
+  z-index: 1000;
 }
 .header__nav {
   display: inherit;
@@ -31,13 +37,17 @@ a {
 .header__nav__logo__link {
   display: flex;
   align-items: center;
-  color: #000000;
+  color: #212529;
 }
 .header__nav__logo__link__nombre {
   font-size: 1.2rem;
   line-height: 1rem;
   font-family: "Bebas Neue", cursive;
   height: max-content;
+  margin: 0;
+}
+.header__nav__logo__link:hover {
+  color: #212529;
 }
 .header__nav__btn {
   border: none;
@@ -51,7 +61,7 @@ a {
 }
 .header__nav__btn:hover {
   color: #ffffff;
-  background: #0d6efd;
+  background: #ba0f0f;
   cursor: pointer;
 }
 .header__nav__menu {
@@ -61,20 +71,20 @@ a {
   width: 100vw;
   transition: 0.2s;
   padding: 10px 0 0 20px;
-  background: #f5f5f5;
+  background: #ffffff;
 }
 .header__nav__menu__list__item {
   list-style: none;
   padding: 10px 0;
 }
 .header__nav__menu__list__item__link {
-  color: #000000;
+  color: #212529;
   padding: 10px;
   transition: 0.2s;
 }
 .header__nav__menu__list__item__link:hover {
   color: #ffffff;
-  background: #0d6efd;
+  background: #ba0f0f;
   cursor: pointer;
 }
 .header__nav .menu-activo {
@@ -89,251 +99,169 @@ a {
     position: initial;
     width: max-content;
     padding: 0;
-    background: #f5f5f5;
+    background: #ffffff;
   }
   .header__nav__menu__list {
     display: flex;
   }
 }
-.inicio {
-  background: linear-gradient(#000000d2, #000000f3), url(/img/bgHome.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  background-position-y: top;
-  min-height: calc(100vh - 60px - 30px);
-  display: flex;
-  align-items: center;
-}
-.inicio__texto {
-  max-width: 1300px;
+.carousel__img {
+  object-fit: cover;
   width: 100%;
-  margin: 0 auto;
+  min-height: 200px;
+  object-position: center;
+}
+
+.fa-superpowers,
+.fa-flag-checkered {
+  color: #ba0f0f;
+}
+
+@media (min-width: 768px) {
+  .carousel__img {
+    width: 100%;
+    min-height: 300px;
+    max-height: 600px;
+    object-position: center;
+  }
+}
+.carousel-global {
+  min-height: calc(100vh - 60px - 30px);
+}
+.carousel-global__texto {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
   font-family: "Bebas Neue", cursive;
-  padding-left: 20px;
+  background: rgba(0, 0, 0, 0.6);
 }
-.inicio__texto__titulo {
+.carousel-global__texto__carousel {
+  max-width: 1300px;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.carousel-global__texto__carousel__titulo {
+  font-size: 6rem;
+}
+.carousel-global__texto__carousel__contacto {
+  margin-bottom: 20px;
+}
+.carousel-global__texto__carousel__contacto__link {
   color: #ffffff;
+  background: #ba0f0f;
+  padding: 10px 20px;
   font-size: 3rem;
-  padding: 5px 0;
-}
-.inicio__texto__subtitulo {
-  color: #ffffff;
-  font-size: 2rem;
-  padding: 5px 0;
-}
-.inicio__texto__contacto {
-  width: max-content;
-  padding: 10px 0;
-}
-.inicio__texto__contacto__link {
-  color: #ffffff;
-  background: #0d6efd;
-  padding: 10px;
   border-radius: 5px;
-  font-size: 2rem;
   transition: 0.2s;
 }
-.inicio__texto__contacto__link:hover {
-  color: #0d6efd;
+.carousel-global__texto__carousel__contacto__link:hover {
+  color: #ba0f0f;
   background: #ffffff;
   cursor: pointer;
 }
 
-.productos {
-  max-width: 1300px;
-  min-height: calc(100vh - 60px - 30px);
-  margin: 0 auto;
-}
-.productos__galeria {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-}
-.productos__galeria__img {
-  max-height: 150px;
-  margin: 20px 0;
+.contendio__subtitulo {
+  font-family: "Bebas Neue", cursive;
+  font-size: 3.5rem;
 }
 
-@media (min-width: 769px) {
-  .productos {
-    max-width: 1300px;
-    min-height: calc(100vh - 60px - 30px);
-    margin: 0 auto;
+@media (max-width: 992px) {
+  .carousel-global__texto__carousel {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .productos__galeria {
-    grid-template-columns: repeat(3, 1fr);
-    margin: 50px 0;
+  .carousel-global__texto__carousel__titulo {
+    font-size: 5rem;
+  }
+  .carousel-global__texto__carousel__contacto__link {
+    color: #ffffff;
+    background: #ba0f0f;
+    padding: 10px 20px;
+    font-size: 2.5rem;
+    border-radius: 5px;
+    transition: 0.2s;
+  }
+  .carousel-global__texto__carousel__contacto__link:hover {
+    color: #ba0f0f;
+    background: #ffffff;
+    cursor: pointer;
   }
 }
-.servicios {
-  max-width: 1300px;
-  min-height: calc(100vh - 60px - 30px);
-  margin: 0 auto;
-}
-.servicios__galeria {
-  display: grid;
-  justify-items: center;
-}
-.servicios__galeria__contenedor {
-  border: 3px solid #00000030;
-  border-radius: 5px;
-  margin: 10px 0;
-  overflow: hidden;
-}
-.servicios__galeria__contenedor__img {
-  max-width: 300px;
-  object-fit: cover;
-}
-.servicios__galeria__contenedor__titulo {
-  max-width: 280px;
-  padding: 10px;
-}
-.servicios__galeria__contenedor__link {
-  display: block;
-  width: max-content;
-  margin: 10px;
-  color: #ffffff;
-  background: #0d6efd;
-  padding: 10px;
-  border-radius: 5px;
-}
-.servicios__galeria__contenedor__link:hover {
-  color: #0d6efd;
-  background: #ffffff;
-  cursor: pointer;
-}
+@media (max-width: 768px) {
+  .carousel-global__texto__carousel__titulo {
+    font-size: 3rem;
+  }
+  .carousel-global__texto__carousel__contacto__link {
+    color: #ffffff;
+    background: #ba0f0f;
+    padding: 10px 20px;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    transition: 0.2s;
+  }
+  .carousel-global__texto__carousel__contacto__link:hover {
+    color: #ba0f0f;
+    background: #ffffff;
+    cursor: pointer;
+  }
 
-@media (min-width: 769px) {
-  .servicios__galeria {
-    display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(3, 1fr);
+  .contendio__subtitulo {
+    font-family: "Bebas Neue", cursive;
+    font-size: 2rem;
   }
 }
-.sobre_nosotros {
-  max-width: 1300px;
-  min-height: calc(100vh - 60px - 30px);
-  margin: 0 auto;
-}
-.sobre_nosotros__contenedor {
-  display: flex;
-  flex-direction: column;
-  max-width: 500px;
-  border: 3px solid #00000030;
-  border-radius: 5px;
-  margin: 10px 0;
-  overflow: hidden;
-  margin: 0 auto;
-}
-.sobre_nosotros__contenedor__img {
-  max-width: 500px;
-  object-fit: cover;
-  border-radius: 5px;
-}
-.sobre_nosotros__contenedor__texto {
-  padding: 10px;
-}
-.sobre_nosotros__contenedor__texto__titulo {
-  padding: 10px 0;
-}
-.sobre_nosotros__contenedor__texto__lista__item {
-  list-style: inside;
-  padding: 10px 0;
-}
-
-@media (min-width: 769px) {
-  .sobre_nosotros__contenedor {
-    flex-direction: row;
-    max-width: 100%;
-  }
-  .sobre_nosotros__contenedor__texto__lista__item {
-    padding: 25px 0;
-  }
-}
-.contacto {
-  max-width: 1300px;
-  min-height: calc(100vh - 60px - 30px);
-  margin: 0 auto;
-}
-.contacto__contenedor {
-  width: max-content;
-  margin: 0 auto;
-}
-.contacto__contenedor__galeria {
+.marcas {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 100%;
+  gap: 20px;
   align-items: center;
   justify-items: center;
-  text-align: center;
-  min-height: 15rem;
 }
-.contacto__contenedor__galeria__link {
-  color: #000000;
-}
-.contacto__contenedor__galeria__link__icono {
-  font-size: 3.5rem;
-  padding: 10px 0;
-}
-.contacto__contenedor__mapa {
-  width: max-content;
-}
-.contacto__contenedor__mapa__iframe {
-  width: 20rem;
-  height: 20rem;
+.marcas__img {
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100px;
 }
 
-.fa-phone-alt {
-  color: #4285f4;
+.fa-cog,
+.fa-ellipsis-v {
+  color: #ba0f0f;
 }
 
-.fa-whatsapp {
-  color: #25d366;
+.btn-servicios {
+  background: #ba0f0f;
+}
+.btn-servicios:hover {
+  color: #ba0f0f;
+  background: #ffffff;
+  cursor: pointer;
 }
 
+.sobre_nosotros {
+  min-height: calc(100vh - 60px - 30px);
+}
+
+.contacto__mapa {
+  height: 300px;
+}
+
+.fa-phone-alt,
+.fa-whatsapp,
 .fa-envelope {
-  color: #ea4335;
+  color: #ba0f0f;
 }
 
-@media (min-width: 769px) {
-  .contacto {
-    max-width: 1300px;
-    min-height: calc(100vh - 60px - 30px);
-    margin: 0 auto;
+@media (max-width: 768px) {
+  .img-wsp {
+    width: 70px;
   }
-  .contacto__contenedor {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 30px 0;
-  }
-  .contacto__contenedor__galeria {
-    width: 50%;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
-    min-height: 15rem;
-  }
-  .contacto__contenedor__mapa {
-    width: 50%;
-  }
-  .contacto__contenedor__mapa__iframe {
-    width: 100%;
-    height: 20rem;
-  }
-}
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30px;
-}
-.footer__texto {
-  font-size: 0.8rem;
-}
-.footer__texto__link {
-  color: #000000;
 }
 
 /*# sourceMappingURL=style.css.map */
