--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,76 +1,13 @@
 //CONTACTO--------
 
-.contacto {
-  @include default__page();
-
-  &__contenedor {
-    width: max-content;
-    margin: 0 auto;
-    &__galeria {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      width: 100%;
-      align-items: center;
-      justify-items: center;
-      text-align: center;
-      min-height: 15rem;
-      &__link {
-        color: map-get($color, negro);
-        &__icono {
-          font-size: 3.5rem;
-          padding: 10px 0;
-        }
-      }
-    }
-
-    &__mapa {
-      width: max-content;
-      &__iframe {
-        width: 20rem;
-        height: 20rem;
-      }
-    }
-  }
+.contacto__mapa {
+  height: 300px;
 }
 
 //iconos
 
-.fa-phone-alt {
-  color: map-get($color, telefono);
-}
-
-.fa-whatsapp {
-  color: map-get($color, whatsapp);
-}
-
+.fa-phone-alt,
+.fa-whatsapp,
 .fa-envelope {
-  color: map-get($color, email);
-}
-
-@media (min-width: 769px) {
-  .contacto {
-    @include default__page();
-
-    &__contenedor {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      margin: 30px 0;
-      &__galeria {
-        width: 50%;
-        align-items: center;
-        justify-items: center;
-        text-align: center;
-        min-height: 15rem;
-      }
-
-      &__mapa {
-        width: 50%;
-        &__iframe {
-          width: 100%;
-          height: 20rem;
-        }
-      }
-    }
-  }
+  color: map-get($color, azul);
 }
