--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,3 +1,29 @@
+//VARIABLES--------
+
+//colores
+
+$color: (
+  "bg": #ffffff,
+  "negro": #212529,
+  "azul": #ba0f0f,
+  "blanco": #ffffff,
+  "telefono": #4285f4,
+  "whatsapp": #25d366,
+  "email": #ea4335,
+);
+
+//fuentes
+
+$open-sans: "Open Sans", sans-serif;
+$neue: "Bebas Neue", cursive;
+
+//tamaños
+
+$nav: 60px;
+$footer-h: 30px;
+$max-w: 1300px;
+$min-h: calc(100vh - $nav - $footer-h);
+
 //GLOBALES--------
 
 * {
@@ -13,4 +39,8 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.m-heigth {
+  min-height: $min-h;
 }
