--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -1,26 +1,14 @@
-//PRODUCTOS--------
+//PRODUCTOS
 
-.productos {
-  @include default__page();
-
-  &__galeria {
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    &__img {
-      max-height: 150px;
-      margin: 20px 0;
-    }
-  }
-}
-
-@media (min-width: 769px) {
-  .productos {
-    @include default__page();
-
-    &__galeria {
-      grid-template-columns: repeat(3, 1fr);
-      margin: 50px 0;
-    }
+.marcas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  align-items: center;
+  justify-items: center;
+  &__img {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100px;
   }
 }
