--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@import "components/variables";
-@import "components/mixin";
 @import "components/global";
+@import "components/mixin";
 @import "components/header";
-@import "components/inicio";
+@import "components/carrousel";
 @import "components/productos";
 @import "components/servicios";
 @import "components/sobre_nosotros";
 @import "components/contacto";
-@import "components/footer";
+
+//Boton Whatsapp
+
+@media (max-width: 768px) {
+  .img-wsp {
+    width: 70px;
+  }
+}
